--- a/film_edit.html
+++ b/film_edit.html
@@ -48,7 +48,7 @@
                             <a class="nav-link" href="profile.html">Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="inventory.html">inventory</a>
+                            <a class="nav-link" href="add_film.html">Add Film</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Logout</a>
