--- a/Inventory.html
+++ b/Inventory.html
@@ -53,6 +53,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="inventory.html">Inventory</a>
+                            <!--<a class="nav-link" href="inventory.html">Inventory</a> when login as admin-->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Logout</a>
