--- a/profile.html
+++ b/profile.html
@@ -49,6 +49,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="inventory.html">Inventory</a>
+                            <!--<a class="nav-link" href="inventory.html">Inventory</a> when login as admin-->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Logout</a>
