--- a/signup.html
+++ b/signup.html
@@ -74,11 +74,7 @@
                                             placeholder="Confirm Password">
                                     </div>
                                     <div class="col-md-12 form-btn text-center">
-                                        <a style="color: #ffffff;" href="login.html">
-                                            <button class="btn btn-block btn-secondary btn-red" type="submit" name="signup">
-                                                SIGN UP
-                                            </button>
-                                         </a>
+                                        <input class="btn btn-block btn-secondary btn-red" type="submit" name="signup" value="SIGNUP">
                                     </div>
                                     <div
                                         class="col-md-6 d-flex align-items-center justify-content-md-start justify-content-center">
