--- a/profile.html
+++ b/profile.html
@@ -77,11 +77,7 @@
                             <p><strong>ID: </strong></p>
                                 <br>
                                 <div class="col-md-12 form-btn text-center">
-                                    <a style="color: #ffffff;" href="inventory.html">
-                                        <button class="btn btn-block btn-secondary btn-red" type="submit" name="add">
-                                            INVENTORY
-                                        </button>
-                                    </a>
+                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="add" value="ADD TO INVENTORY">
                                 </div>
                             </div>
                         </div>
