--- a/login.html
+++ b/login.html
@@ -62,11 +62,7 @@
                                             placeholder="Password">
                                     </div>
                                     <div class="col-md-12 form-btn text-center">
-                                        <a style="color: #ffffff;" href="home.html">
-                                            <button class="btn btn-block btn-secondary btn-red" type="submit" name="login">
-                                                LOGIN
-                                            </button>
-                                        </a>
+                                        <input class="btn btn-block btn-secondary btn-red" type="submit" name="login" value="LOGIN">
                                     </div>
                                     <div
                                         class="col-md-6 d-flex align-items-center justify-content-md-start justify-content-center">
