--- a/home.html
+++ b/home.html
@@ -81,11 +81,7 @@
                                     <br>
                                     <br>
                                     <div class="col-md-12 form-btn text-center">
-                                        <a style="color: #ffffff;" href="film.html">
-                                            <button class="btn btn-block btn-secondary btn-red" type="submit" name="search">    
-                                                SEARCH
-                                            </button>
-                                        </a>
+                                        <input class="btn btn-block btn-secondary btn-red" type="submit" name="f_search" value="SEARCH">
                                     </div>
                                 </div>
                                 <br>
