--- a/film_edit.html
+++ b/film_edit.html
@@ -108,11 +108,7 @@
                             <br>
                             <div class="col-md-8 offset-md-2 contact-form-holder mt-4">
                                 <div class="col-md-12 form-btn text-center">
-                                    <a style="color: #ffffff;" href="film_admin.html">
-                                        <button class="btn btn-block btn-secondary btn-red" type="submit" name="add">
-                                            UPLOAD                                        
-                                        </button>
-                                    </a>
+                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="upload" value="UPLOAD">
                                 </div>
                             </div>
                         </div>
