--- a/film_admin.html
+++ b/film_admin.html
@@ -88,11 +88,7 @@
                             <br>
                             <div class="col-md-8 offset-md-2 contact-form-holder mt-4">
                                 <div class="col-md-12 form-btn text-center">
-                                    <a style="color: #ffffff;" href="film_edit.html">
-                                        <button class="btn btn-block btn-secondary btn-red" type="submit" name="edit">
-                                            EDIT                                        
-                                        </button>
-                                    </a>
+                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="edit" value="EDIT">
                                 </div>
                             </div>
                         </div>
