--- a/film.html
+++ b/film.html
@@ -102,11 +102,7 @@
                                 <h5 style="margin-left: 1em;">Cost:</h5>
                                 <br>
                                 <div class="col-md-12 form-btn text-center">
-                                    <a style="color: #ffffff;" href="inventory.html">
-                                        <button class="btn btn-block btn-secondary btn-red" type="submit" name="add">
-                                            ADD TO INVENTORY
-                                        </button>
-                                    </a>
+                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="add" value="ADD TO INVENTORY">
                                 </div>
                             </div>
                         </div>
