--- a/add_film.html
+++ b/add_film.html
@@ -108,11 +108,7 @@
                             <br>
                             <div class="col-md-8 offset-md-2 contact-form-holder mt-4">
                                 <div class="col-md-12 form-btn text-center">
-                                    <a style="color: #ffffff;" href="film_admin.html">
-                                        <button class="btn btn-block btn-secondary btn-red" type="submit" name="add">
-                                            ADD
-                                        </button>
-                                    </a>
+                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="f_add" value="ADD">
                                 </div>
                             </div>
                         </div>
