--- a/profile.html
+++ b/profile.html
@@ -77,7 +77,11 @@
                             <p><strong>ID: </strong></p>
                                 <br>
                                 <div class="col-md-12 form-btn text-center">
-                                    <input class="btn btn-block btn-secondary btn-red" type="submit" name="add" value="ADD TO INVENTORY">
+                                    <a href="inventory.html">
+										<button class="btn btn-block btn-secondary btn-red" name="inv">
+											   INVENTORY
+										</button>
+									</a>
                                 </div>
                             </div>
                         </div>
